# griffe-sphinx

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
coverage/: index.html
credits/: index.html
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  index.md  installation.md
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/SUMMARY/: index.html
reference/griffe_sphinx/: index.html
reference/griffe_sphinx/_internals/: index.html
reference/griffe_sphinx/_internals/extension/: index.html
reference/griffe_sphinx/debug/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/griffe_sphinx/: __init__.py  debug.py
src/griffe_sphinx/_internals/: extension.py
tests/: __init__.py
