[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "griffe-sphinx"
description = "Parse Sphinx-comments above attributes as docstrings."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://mkdocstrings.github.io/griffe-sphinx"
Documentation = "https://mkdocstrings.github.io/griffe-sphinx"
Changelog = "https://mkdocstrings.github.io/griffe-sphinx/changelog"
Repository = "https://github.com/mkdocstrings/griffe-sphinx"
Issues = "https://github.com/mkdocstrings/griffe-sphinx/issues"
Discussions = "https://github.com/mkdocstrings/griffe-sphinx/discussions"
Gitter = "https://gitter.im/mkdocstrings/griffe-sphinx"
Funding = "https://github.com/sponsors/pawamoy"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
